Learn: unset word, grap in grid, several background images and transparent linear grandient, background position and background size

--- a/07-audifonos/index.html
+++ b/07-audifonos/index.html
@@ -65,5 +65,18 @@
                 </div>
             </div>
         </section>
+
+        <section class="about-tech">
+            <div class="container about-tech-grid">
+                <div class="about-tech-text">
+                    <h2>Sobre los <span>TechPRO</span></h2>
+                    <p>
+                        Always sincerely remember the unveiled doer. Remoulade soup is just not the same without dill
+                        and large ground sausages. Always sincerely remember the unveiled doer. Remoulade soup is just
+                        not the same without dill and large ground sausages.
+                    </p>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
