Learn: Styles in buttons and inputs | background position | dynamic loading of image formats depending on the browser in css

--- a/07-audifonos/index.html
+++ b/07-audifonos/index.html
@@ -96,5 +96,28 @@
                 </div>
             </div>
         </main>
+
+        <section class="newsletter">
+            <div class="newsletter-content container">
+                <div class="newsletter-text">
+                    <h2 class="title">Recibe Actualizaciones</h2>
+                    <p>
+                        Always sincerely remember the unveiled doer. Remoulade soup is just not the same without dill
+                        and large ground sausages. Always sincerely remember the unveiled doer. Remoulade soup is just
+                        not the same without dill and large ground sausages.
+                    </p>
+                    <form class="form">
+                        <div class="input">
+                            <input type="email" name="email" placeholder="Tu email"/>
+                        </div>
+                        <input type="submit" value="Inscribirme"/>
+                    </form>
+                </div>
+            </div>
+        </section>
+
+        <footer class="footer">
+            <p>Todos los Derechos Reservados</p>
+        </footer>
     </body>
 </html>
