Learn: Nesting code

--- a/08-forest-architecture/index.html
+++ b/08-forest-architecture/index.html
@@ -13,6 +13,28 @@
         <link rel="stylesheet" href="./css/styles.css">
     </head>
     <body>
-
+        <header class="header">
+            <div class="container header-container">
+                <div class="header-top">
+                    <div class="logo">
+                        <h1 class="site-name">Arquitectura<span>Bosque</span></h1>
+                    </div>
+                    <div class="contact">
+                        <a class="number-phone" href="tel:01-800-0000-000">01-800-0000-000</a>
+                        <nav class="navbar">
+                            <a class="link" href="#">Inicio</a>
+                            <a class="link" href="#">Nosotros</a>
+                            <a class="link" href="#">Modelos</a>
+                            <a class="link" href="#">Galeria</a>
+                            <a class="link" href="#">Contacto</a>
+                        </nav>
+                    </div>
+                </div>
+                <div class="header-slogan">
+                    <h1>Tu casa en el bosque</h1>
+                    <p>Construimos la casa de tus sueños</p>
+                </div>
+            </div>
+        </header>
     </body>
 </html>
