--- a/08-forest-architecture/index.html
+++ b/08-forest-architecture/index.html
@@ -36,5 +36,23 @@
                 </div>
             </div>
         </header>
+
+        <section class="container about">
+            <div class="about-container">
+                <h2>Sobre Nosotros</h2>
+                <p>
+                    Nam sit amet quam magna. Proin sed cursus justo. Nunc vitae dolor et nibh lacinia bibendum nec
+                    sit
+                    amet erat. Praesent id risus a odio condimentum venenatis at id nibh. Duis dolor dui, ultrices
+                    id
+                    fringilla et. Mauris malesuada ultrices facilisis.
+                </p>
+                <p>
+                    Praesent id risus a odio condimentum venenatis at id nibh. Duis dolor dui, ultrices id fringilla
+                    et,
+                    porta ut felis. Mauris malesuada ultrices facilisis.
+                </p>
+            </div>
+        </section>
     </body>
 </html>
