Learn: padding | background size | background position

--- a/08-forest-architecture/index.html
+++ b/08-forest-architecture/index.html
@@ -54,5 +54,36 @@
                 </p>
             </div>
         </section>
+
+        <main class="container models mt-5">
+            <h2 class="text-center">Conoce nuestros 3 modelos</h2>
+            <div class="model basic-model">
+                <div class="model-content">
+                    <h3>Modelo Básico</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti, odit? Distinctio iure
+                        temporibus ab repellendus iste reiciendis accusantium nostrum, sit, cum accusamus omnis tempora
+                        facilis facere, pariatur ad repellat ex!</p>
+                    <a href="#" class="btn">Más información</a>
+                </div>
+            </div>
+            <div class="model premier-model">
+                <div class="model-content">
+                    <h3>Modelo Premier</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti, odit? Distinctio iure
+                        temporibus ab repellendus iste reiciendis accusantium nostrum, sit, cum accusamus omnis tempora
+                        facilis facere, pariatur ad repellat ex!</p>
+                    <a href="#" class="btn">Más información</a>
+                </div>
+            </div>
+            <div class="model elite-model">
+                <div class="model-content">
+                    <h3>Modelo Elite</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti, odit? Distinctio iure
+                        temporibus ab repellendus iste reiciendis accusantium nostrum, sit, cum accusamus omnis tempora
+                        facilis facere, pariatur ad repellat ex!</p>
+                    <a href="#" class="btn">Más información</a>
+                </div>
+            </div>
+        </main>
     </body>
 </html>
