--- a/08-forest-architecture/index.html
+++ b/08-forest-architecture/index.html
@@ -85,5 +85,55 @@
                 </div>
             </div>
         </main>
+
+        <section class="container gallery mt-5">
+            <h2 class="text-center">Galería</h2>
+            <div class="images-container">
+                <div class="image">
+                    <img src="./img/imagen_1.jpg" alt="Imagen Galeria"/>
+                </div>
+                <div class="image">
+                    <img src="./img/imagen_2.jpg" alt="Imagen Galeria"/>
+                </div>
+                <div class="image">
+                    <img src="./img/imagen_3.jpg" alt="Imagen Galeria"/>
+                </div>
+                <div class="image">
+                    <img src="./img/imagen_4.jpg" alt="Imagen Galeria"/>
+                </div>
+                <div class="image">
+                    <img src="./img/imagen_5.jpg" alt="Imagen Galeria"/>
+                </div>
+                <div class="image">
+                    <img src="./img/imagen_6.jpg" alt="Imagen Galeria"/>
+                </div>
+                <div class="image">
+                    <img src="./img/imagen_7.jpg" alt="Imagen Galeria"/>
+                </div>
+            </div>
+        </section>
+
+        <footer class="footer mt-5">
+            <div class="container header-container">
+                <div class="header-top">
+                    <div class="logo">
+                        <h1 class="site-name">Arquitectura<span>Bosque</span></h1>
+                    </div>
+                    <div class="contact">
+                        <a class="number-phone" href="tel:01-800-0000-000">01-800-0000-000</a>
+                        <nav class="navbar">
+                            <a class="link" href="#">Inicio</a>
+                            <a class="link" href="#">Nosotros</a>
+                            <a class="link" href="#">Modelos</a>
+                            <a class="link" href="#">Galeria</a>
+                            <a class="link" href="#">Contacto</a>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+            <div class="copy">
+                <p>Todos los derechos reservados ©</p>
+            </div>
+        </footer>
     </body>
 </html>
