--- a/10-nucleus-eWallet/index.html
+++ b/10-nucleus-eWallet/index.html
@@ -1,20 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nucleus - eWallet </title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;900&display=swap" rel="stylesheet"> 
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Nucleus - eWallet </title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;900&display=swap"
+              rel="stylesheet">
 
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/styles.css">
+    </head>
+    <body>
 
-    <header
-    
-</body>
+        <header class="header">
+            <div class="header__container">
+                <div class="header__bar">
+                    <div class="header__logo">
+                        <img src="img/logo.svg" alt="Logo">
+                    </div>
+                    <nav class="navbar">
+                        <a href="#" class="navbar__link">¿Qué es?</a>
+                        <a href="#" class="navbar__link">¿Cómo funciona?</a>
+                        <a href="#" class="navbar__link">Precio</a>
+                        <a href="#" class="navbar__link">Contratar</a>
+                    </nav>
+                </div>
+                <div class="header__grid">
+                    <div class="header__text">
+                        <h1 class="header__heading">Recibe y realiza pagos en tu celular con nucleus</h1>
+                        <a href="#" class="header__button">Obtener Cuenta</a>
+                    </div>
+                    <div class="header__graphic">
+                        <img class="header-image" src="img/app_1.svg" alt="Imagen de nucleus">
+                    </div>
+                </div>
+            </div>
+        </header>
+
+    </body>
 </html>
