--- a/10-nucleus-eWallet/index.html
+++ b/10-nucleus-eWallet/index.html
@@ -14,7 +14,6 @@
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
-
         <header class="header">
             <div class="header__container">
                 <div class="header__bar">
@@ -40,5 +39,32 @@
             </div>
         </header>
 
+        <main class="nucleus">
+            <h2 class="nucleus__heading">¿Qué es?</h2>
+            <div class="nucleus__container">
+                <div class="nucleus__grid">
+                    <div class="nucleus__image">
+                        <img src="./img/app_2.svg" alt="Imagen 2">
+                    </div>
+                    <div class="cardList">
+                        <div class="cardList__element">
+                            <h2 class="cardList__heading">Fácil</h2>
+                            <p class="cardList__text">Crea una cuenta, envía tu documentación y comienza a utilizar
+                                nucleus en un par de horas</p>
+                        </div>
+                        <div class="cardList__element">
+                            <h2 class="cardList__heading">Seguro</h2>
+                            <p class="cardList__text">Por su tecnología digital nucleus es imposible de hackear o
+                                robar</p>
+                        </div>
+                        <div class="cardList__element">
+                            <h2 class="cardList__heading">Administrable</h2>
+                            <p class="cardList__text">Añade o transfiere fondos a tu banco, añade limites o controla tus
+                                gastos</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
     </body>
 </html>
