--- a/10-nucleus-eWallet/index.html
+++ b/10-nucleus-eWallet/index.html
@@ -66,5 +66,29 @@
                 </div>
             </div>
         </main>
+
+        <section class="security">
+            <div class="security__container">
+                <h2 class="security__heading">Nucleus es seguro</h2>
+                <div class="security__grid">
+                    <div class="cardList">
+                        <div class="cardList__element cardList__element--bgWhite">
+                            <p class="cardList__text">Nucleus es seguro e imposible de clonar</p>
+                        </div>
+                        <div class="cardList__element">
+                            <p class="cardList__text">Utiliza tu cara o tu dedo para confirmar un deposito o registrar
+                                una cuenta</p>
+                        </div>
+                        <div class="cardList__element cardList__element--bgWhite">
+                            <p class="cardList__text">Paga en un establecimiento con una tarjeta de crédito que se
+                                desactiva una vez que has hecho tu compra</p>
+                        </div>
+                    </div>
+                    <div class="security__image">
+                        <img src="./img/seguridad.png" alt="Seguridad Nucleus">
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
