--- a/10-nucleus-eWallet/index.html
+++ b/10-nucleus-eWallet/index.html
@@ -1,94 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Nucleus - eWallet </title>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;900&display=swap"
-              rel="stylesheet">
 
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/styles.css">
-    </head>
-    <body>
-        <header class="header">
-            <div class="header__container">
-                <div class="header__bar">
-                    <div class="header__logo">
-                        <img src="img/logo.svg" alt="Logo">
-                    </div>
-                    <nav class="navbar">
-                        <a href="#" class="navbar__link">¿Qué es?</a>
-                        <a href="#" class="navbar__link">¿Cómo funciona?</a>
-                        <a href="#" class="navbar__link">Precio</a>
-                        <a href="#" class="navbar__link">Contratar</a>
-                    </nav>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nucleus - eWallet </title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;900&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+
+<body>
+    <header class="header">
+        <div class="header__container">
+            <div class="header__bar">
+                <div class="header__logo">
+                    <img src="img/logo.svg" alt="Logo">
                 </div>
-                <div class="header__grid">
-                    <div class="header__text">
-                        <h1 class="header__heading">Recibe y realiza pagos en tu celular con nucleus</h1>
-                        <a href="#" class="header__button">Obtener Cuenta</a>
+                <nav class="navbar">
+                    <a href="#" class="navbar__link">¿Qué es?</a>
+                    <a href="#" class="navbar__link">¿Cómo funciona?</a>
+                    <a href="#" class="navbar__link">Precio</a>
+                    <a href="#" class="navbar__link">Contratar</a>
+                </nav>
+            </div>
+            <div class="header__grid">
+                <div class="header__text">
+                    <h1 class="header__heading">Recibe y realiza pagos en tu celular con nucleus</h1>
+                    <a href="#" class="header__button">Obtener Cuenta</a>
+                </div>
+                <div class="header__graphic">
+                    <img class="header-image" src="img/app_1.svg" alt="Imagen de nucleus">
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <main class="nucleus">
+        <h2 class="nucleus__heading">¿Qué es?</h2>
+        <div class="nucleus__container">
+            <div class="nucleus__grid">
+                <div class="nucleus__image">
+                    <img src="./img/app_2.svg" alt="Imagen 2">
+                </div>
+                <div class="cardList">
+                    <div class="cardList__element">
+                        <h2 class="cardList__heading">Fácil</h2>
+                        <p class="cardList__text">Crea una cuenta, envía tu documentación y comienza a utilizar
+                            nucleus en un par de horas</p>
                     </div>
-                    <div class="header__graphic">
-                        <img class="header-image" src="img/app_1.svg" alt="Imagen de nucleus">
+                    <div class="cardList__element">
+                        <h2 class="cardList__heading">Seguro</h2>
+                        <p class="cardList__text">Por su tecnología digital nucleus es imposible de hackear o
+                            robar</p>
+                    </div>
+                    <div class="cardList__element">
+                        <h2 class="cardList__heading">Administrable</h2>
+                        <p class="cardList__text">Añade o transfiere fondos a tu banco, añade limites o controla tus
+                            gastos</p>
                     </div>
                 </div>
             </div>
-        </header>
+        </div>
+    </main>
 
-        <main class="nucleus">
-            <h2 class="nucleus__heading">¿Qué es?</h2>
-            <div class="nucleus__container">
-                <div class="nucleus__grid">
-                    <div class="nucleus__image">
-                        <img src="./img/app_2.svg" alt="Imagen 2">
+    <section class="security">
+        <div class="security__container">
+            <h2 class="security__heading">Nucleus es seguro</h2>
+            <div class="security__grid">
+                <div class="cardList">
+                    <div class="cardList__element">
+                        <p class="cardList__text">Nucleus es seguro e imposible de clonar</p>
                     </div>
+                    <div class="cardList__element">
+                        <p class="cardList__text">Utiliza tu cara o tu dedo para confirmar un deposito o registrar
+                            una cuenta</p>
+                    </div>
+                    <div class="cardList__element">
+                        <p class="cardList__text">Paga en un establecimiento con una tarjeta de crédito que se
+                            desactiva una vez que has hecho tu compra</p>
+                    </div>
+                </div>
+                <div class="security__image">
+                    <img src="./img/seguridad.png" alt="Seguridad Nucleus">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="commissions">
+        <div class="comissions__container">
+            <h2 class="commissions__header">Comisiones</h2>
+            <div class="commissions__grid">
+                <div class="comissions__content">
+                    <p class="commissions__text">Mientras más veces utilices nucleus, menos pagas: </p>
                     <div class="cardList">
-                        <div class="cardList__element">
-                            <h2 class="cardList__heading">Fácil</h2>
-                            <p class="cardList__text">Crea una cuenta, envía tu documentación y comienza a utilizar
-                                nucleus en un par de horas</p>
+                        <div class="cardList__element cardList__element--2col">
+                            <p class="cardList__porcent">3%</p>
+                            <p class="cardList__text">de todas tus transacciones si tus movimientos son menores a $999
+                            </p>
                         </div>
-                        <div class="cardList__element">
-                            <h2 class="cardList__heading">Seguro</h2>
-                            <p class="cardList__text">Por su tecnología digital nucleus es imposible de hackear o
-                                robar</p>
-                        </div>
-                        <div class="cardList__element">
-                            <h2 class="cardList__heading">Administrable</h2>
-                            <p class="cardList__text">Añade o transfiere fondos a tu banco, añade limites o controla tus
-                                gastos</p>
+                        <div class="cardList__element cardList__element--2col">
+                            <p class="cardList__porcent">2.5%</p>
+                            <p class="cardList__text">de todas tus transacciones si tus movimientos son mayores a $999
+                                USD</p>
                         </div>
                     </div>
                 </div>
+                <div class="commissions__image">
+                    <img src="./img/app_3.svg" alt="Imagen Nucleus app 2" />
+                </div>
             </div>
-        </main>
+        </div>
+    </section>
+</body>
 
-        <section class="security">
-            <div class="security__container">
-                <h2 class="security__heading">Nucleus es seguro</h2>
-                <div class="security__grid">
-                    <div class="cardList">
-                        <div class="cardList__element cardList__element--bgWhite">
-                            <p class="cardList__text">Nucleus es seguro e imposible de clonar</p>
-                        </div>
-                        <div class="cardList__element">
-                            <p class="cardList__text">Utiliza tu cara o tu dedo para confirmar un deposito o registrar
-                                una cuenta</p>
-                        </div>
-                        <div class="cardList__element cardList__element--bgWhite">
-                            <p class="cardList__text">Paga en un establecimiento con una tarjeta de crédito que se
-                                desactiva una vez que has hecho tu compra</p>
-                        </div>
-                    </div>
-                    <div class="security__image">
-                        <img src="./img/seguridad.png" alt="Seguridad Nucleus">
-                    </div>
-                </div>
-            </div>
-        </section>
-    </body>
 </html>
